syntax = "proto3";

option java_multiple_files = true;

package id.swarawan;

message ChatMessage {
    string name = 1;
    int32 number = 2;
}

message ChatResponse {
    string responseMessage = 2;
}

service ChatService {
    rpc chat (ChatMessage) returns (ChatResponse);
}